ifc-macros/test/while_high1.stderr
error: Cannot declare new low variable or assign to low variable in high context
  --> $DIR/while_high1.rs:10:13
   |
10 |             _x += 1;
   |             ^^^^^^^
   |
help: High context was created here
  --> $DIR/while_high1.rs:8:15
   |
8  |         while a > 5 {
   |               ^^^^^
help: Low variable is used here.
  --> $DIR/while_high1.rs:10:13
   |
10 |             _x += 1;
   |             ^^
